syntax = "proto3";

message MpdProfile {
  string name = 1;
  string host = 2;
  uint32 port = 3;
}

message MpdProfileState {
  MpdProfile current_profile = 1;
  repeated MpdProfile profiles = 2;
}
